deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ib-webui
  namespace: ib-webui
  labels:
    app: ib-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ib-webui
  template:
    metadata:
      labels:
        app: ib-webui
    spec:
      containers:
        - name: ib-webui
          image: registry1.dso.mil/ironbank/opensource/open-webui/open-webui:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          resources:
              requests:
                cpu: '2'
                memory: 5Gi
              limits:
                cpu: '2'
                memory: 5Gi
          
          imagePullSecrets:
            - name: ibowui
          securityContext:
          seccompProfile:
          type: RuntimeDefault
      serviceAccountName: default
