service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ib-webui
  namespace: ib-webui
  labels:
    app: ib-webui
spec:
  selector:
    app: ib-webui
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080 
      name: http
